Added icon and resume

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Welcome</title>
+    <title>theVatsalSaglani</title>
+    <link rel="icon" type="image/ico" href="images/VS.png" />
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.25/css/uikit.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -31,6 +32,7 @@
             </div>
 
             <!-- <modals> -->
+
             <!-- <aboutModal> -->
 
             <div id="modalAbout" class="uk-modal-full modalContent" style="background-color: #0C0B34; height: 100vh;"
@@ -300,6 +302,9 @@
                         <li>wait I am on <a href="https://thevatsalsaglani.tumblr.com" target="_blank" uk-icon="icon: tumblr; ratio: 2"></a></li>
                         <li>or...</li>
                         <li>text me on <a href="tel: +91 9790960353" target="_blank" uk-icon="icon: whatsapp; ratio: 2"></a></li>
+                        <li>ooh, also don't forget check out <a href="https://drive.google.com/file/d/1Vo2R4J4wNOW_7r_6yXT1Ms5FUHJxB-8p/view"
+                                target="_blankl" uk-icon="icon: file-pdf; ratio: 2.5" uk-tooltip="title: RESUME; pos: right; animation: uk-animation-kenburns; duration: 1500"></a></li>
+
 
 
 
