--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                         <li>wait I am on <a href="https://thevatsalsaglani.tumblr.com" target="_blank" uk-icon="icon: tumblr; ratio: 2"></a></li>
                         <li>or...</li>
                         <li>text me on <a href="tel: +91 9790960353" target="_blank" uk-icon="icon: whatsapp; ratio: 2"></a></li>
-                        <li>ooh, also don't forget check out <a href="https://drive.google.com/file/d/1Vo2R4J4wNOW_7r_6yXT1Ms5FUHJxB-8p/view"
+                        <li>ooh, also don't forget to check out <a href="https://drive.google.com/file/d/1Vo2R4J4wNOW_7r_6yXT1Ms5FUHJxB-8p/view"
                                 target="_blankl" uk-icon="icon: file-pdf; ratio: 2.5" uk-tooltip="title: RESUME; pos: right; animation: uk-animation-kenburns; duration: 1500"></a></li>
 
 
