--- a/index.html
+++ b/index.html
@@ -25,13 +25,47 @@
                     <h2><a href="#modalAbout" class="uk-link-reset" uk-toggle>ABOUT</a></h2>
                     <h2><a href="#modalWork" class="uk-link-reset" uk-toggle>WORK</a></h2>
                     <h2><a href="#modalBlog" class="uk-link-reset" uk-toggle>BLOGS</a></h2>
-                    <h2><a href="#modalContact" class="uk-link-reset" uk-toggle>CONTACT</a></h2>
-
+                    <h2><a href="#modalContact" class="uk-link-reset" uk-toggle>CONTACT,</a><i> or</i></h2>
+                    <div class="form-modal-button">
+                        <p>ping <i><a href="#form-modal" class="uk-link" style="color: yellow"
+                                    uk-toggle>here</a>,</i> directly</p>
+                    </div>
                 </div>
 
             </div>
 
             <!-- <modals> -->
+
+
+            <!-- contactFormModal -->
+
+            <div id="form-modal" class="uk-flex-top" uk-modal>
+                <div style="background-color: #0C0B34" class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
+                    <button class="uk-modal-close-outside" type="button" uk-close></button>
+
+                    <form name="contact" method="POST" netlify>
+                        <p class="uk-hidden">
+                            <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
+                        </p>
+                        <input class="uk-input uk-form-blank uk-form-width-large" style="margin-top: 10px; margin-bottom: 10px; font-family: 'Righteous', cursive; "
+                            type="text" name="email" placeholder="E-mail" required>
+                        <input class="uk-input uk-form-blank uk-form-width-large" style="margin-top: 10px; margin-bottom: 10px; font-family: 'Righteous', cursive; "
+                            type="text" name="name" placeholder="Name" required>
+                        <input class="uk-input uk-form-blank uk-form-width-large" style="margin-top: 10px; margin-bottom: 10px; font-family: 'Righteous', cursive; "
+                            type="text" name="subject" placeholder="Subject" required>
+                        <input class="uk-input uk-form-blank uk-form-width-large" style="height: 200px; margin-top: 10px; margin-bottom: 10px; font-family: 'Righteous', cursive; "
+                            type="text" name="message" placeholder="Message" required>
+
+                        <div data-netlify-recaptcha="true"></div> <br>
+                        <button class="uk-button uk-button-danger" style="margin-top: 10px; margin-bottom: 10px; font-family: 'Righteous', cursive; color: white"
+                            value="submit" type="submit">Submit</button>
+                    </form>
+
+                </div>
+            </div>
+
+            <!-- contactFormModal -->
+
 
             <!-- <aboutModal> -->
 
@@ -350,8 +384,11 @@
             <h3 class="uk-link-reset"><a href="#modalAbout" uk-toggle>ABOUT</a></h3>
             <h3 class="uk-link-reset"><a href="#modalWork" uk-toggle>WORK</a></h3>
             <h3 class="uk-link-reset"><a href="#modalBlog" uk-toggle>BLOGS</a></h3>
-            <h3 class="uk-link-reset"><a href="#modalContact" uk-toggle>CONTACT</a></h3>
-
+            <h3 class="uk-link-reset"><a href="#modalContact" uk-toggle>CONTACT,</a><i> or</i></h3>
+            <div class="form-modal-button-phone">
+                <p>ping <i><a href="#form-modal" class="uk-link" style="color: yellow" uk-toggle>
+                            here</a>,</i> directly</p>
+            </div>
         </div>
 
 
