--- a/index.html
+++ b/index.html
@@ -200,6 +200,19 @@
                         <div class="aboutRight">
                             <h1 class="modalSubHeading uk-text-center">Notable Projects</h1>
                             <ul class="uk-list" style="padding-top: 20px">
+                                <!-- Project 4 -->
+                                <li><a href="https://github.com/vatsalsaglani/xrayimage_extractfeatures"
+                                        target="_blank" class="uk-link-reset">
+
+                                        <h3 class="uk-text-centet"
+                                            style="color: white; font-family: 'Righteous', cursive;">A Python package to
+                                            extract features from X-ray/medical images.
+
+                                        </h3>
+
+                                    </a>
+                                </li>
+                                <!-- /Project 4 -->
                                 <!-- Project 1 -->
                                 <li><a href="https://github.com/vatsalsaglani/Book-Recommendation-System-using-Sentiment-Analysis"
                                         target="_blank" class="uk-link-reset">
