Added the full resume.

--- a/index.html
+++ b/index.html
@@ -398,11 +398,17 @@
                         <li>or...</li>
                         <li>text me on <a href="tel: +91 9790960353" target="_blank"
                                 uk-icon="icon: whatsapp; ratio: 2"></a></li>
-                        <li>ooh, also don't forget to check out <a
+                        
+                        <ul>
+                            <li>ooh, also don't forget to check out <a
                                 href="https://drive.google.com/file/d/1Vo2R4J4wNOW_7r_6yXT1Ms5FUHJxB-8p/view"
+                                target="_blankl" uk-icon="icon: file-pdf; ratio: 1.0"
+                                uk-tooltip="title: RESUME BRIEF; pos: right; animation: uk-animation-kenburns; duration: 1500"></a>, </li>
+                            <li><a
+                                href="https://drive.google.com/open?id=1fsGQioPgIqzlSc2TaKKN_8E77TfB33kb"
                                 target="_blankl" uk-icon="icon: file-pdf; ratio: 2.5"
-                                uk-tooltip="title: RESUME; pos: right; animation: uk-animation-kenburns; duration: 1500"></a>
-                        </li>
+                                uk-tooltip="title: RESUME; pos: right; animation: uk-animation-kenburns; duration: 1500"></a></li>
+                        </ul>
 
 
 
