--- a/index.html
+++ b/index.html
@@ -146,11 +146,24 @@
                         <div class="aboutLeft  ">
                             <h1 class="modalSubHeading uk-text-center">Research Works</h1>
                             <ul class="uk-list" style="padding-top: 20px">
+                                <!-- paper -->
+                                <li><a href="https://drive.google.com/file/d/1qubOxU9CbiVL_ZPT0kTVvk_rD11W_S3j/view?usp=sharing" target="_blank"
+                                    class="uk-link-reset">
+
+                                    <span class="uk-text-center" uk-tooltip="NTMS - 2019, Spain">"Big Data technology in Healthcare: A Survey" <span class="uk-badge" style="background-color: red">NEW</span></span><br><span>-</span>
+                                        <span style="color: gray; font-family: 'Righteous', cursive;"><i
+                                                style="color: gray;">Vatsal J. Saglani, Bharat S. Rawal, V. Vijayakumar, Longzhi Yang.</i></span>
+                                    </span>
+
+                                </a>
+                            </li>
+                            <!-- /paper -->
+
                                 <!-- paper-1 -->
-                                <li><a href="https://ieeexplore.ieee.org/document/8553889" target="_blank"
+                                <li style="padding-top: 25px;"><a href="https://ieeexplore.ieee.org/document/8553889" target="_blank"
                                         class="uk-link-reset">
 
-                                        <span class="uk-text-centet">"Classifying and Predicting DoS and DDoS Attacks
+                                        <span class="uk-text-center" uk-tooltip="ICOEI - 2018">"Classifying and Predicting DoS and DDoS Attacks
                                             on
                                             Cloud Services"<br><span>-</span>
                                             <span style="color: gray; font-family: 'Righteous', cursive;"><i
@@ -167,7 +180,7 @@
                                 <li style="padding-top: 25px;"><a href="https://ieeexplore.ieee.org/document/8553780"
                                         target="_blank" class="uk-link-reset">
 
-                                        <span class="uk-text-centet">“Malware Classification Using Machine Learning
+                                        <span class="uk-text-center" uk-tooltip="ICOEI - 2018">“Malware Classification Using Machine Learning
                                             Algorithms"<br><span>-</span>
                                             <span style="color: gray; font-family: 'Righteous', cursive;"><i
                                                     style="color: gray;">N.
@@ -184,7 +197,7 @@
                                         href="https://drive.google.com/file/d/1OWQQ7EDgCwBUj6RojG5aUOsIm6nfOO1M/view?usp=sharing"
                                         target="_blank" class="uk-link-reset">
 
-                                        <span class="uk-text-centet">“IoT based Smart Safe System"<br><span>-</span>
+                                        <span class="uk-text-center" uk-tooltip="CTEMS - 2018">“IoT based Smart Safe System"<br><span>-</span>
                                             <span style="color: gray; font-family: 'Righteous', cursive;"><i
                                                     style="color: gray;">Vatsal
                                                     J. Saglani; Aayush V. Gupta; Rupam Sarma; Dr. D Rekha; Shashank
@@ -385,13 +398,13 @@
                     <ul class="uk-list uk-text-center">
                         <li>shoot a <a href="mailto:youknowiamtrying@gmail.com" target="_blank"
                                 uk-icon="icon: mail; ratio: 2"></a></li>
-                        <li>friend me on <a href="https://www.facebook.com/theVatsal.saglani" target="_blank"
-                                uk-icon="icon: facebook; ratio: 2"></a></li>
-                        <li>follow me on <a href="https://www.instagram.com/thevatsalsaglani/" target="_blank"
-                                uk-icon="icon: instagram; ratio: 2"></a></li>
+                        <li><del>friend me on <a href="https://www.facebook.com/theVatsal.saglani" target="_blank"
+                                uk-icon="icon: facebook; ratio: 2"></a></del><span class="uk-badge" style="background-color: red">X</span></li>
+                        <li><del>follow me on <a href="https://www.instagram.com/thevatsalsaglani/" target="_blank"
+                                uk-icon="icon: instagram; ratio: 2"></a></del> <span class="uk-badge" style="background-color: red">X</span></li>
                         <li>we can endorse each other on <a href="https://www.linkedin.com/in/vatsalsaglani/"
                                 target="_blank" uk-icon="icon: linkedin; ratio: 2"></a></li>
-                        <li>don't bother searching me on <a href="https://twitter.com/thevatsal_s" target="_blank"
+                        <li><del>don't bother searching me on</del>, retweet my tweets or mention me on <a href="https://twitter.com/thevatsal_s" target="_blank"
                                 uk-icon="icon: twitter; ratio: 2"></a></li>
                         <li>wait I am on <a href="https://thevatsalsaglani.tumblr.com" target="_blank"
                                 uk-icon="icon: tumblr; ratio: 2"></a></li>
