--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="uk-text-center navContainer">
                     <h2><a href="#modalAbout" class="uk-link-reset" uk-toggle>ABOUT</a></h2>
                     <h2><a href="#modalWork" class="uk-link-reset" uk-toggle>WORK</a></h2>
-                    <h2><a href="#modalBlog" class="uk-link-reset" uk-toggle>BLOGS</a></h2>
+                    <h2><a href="#modalBlog" class="uk-link-reset" uk-toggle>BLOGS <span class="uk-badge" style="background-color: red">NEW</span></a></h2>
                     <h2><a href="#modalContact" class="uk-link-reset" uk-toggle>CONTACT,</a><i> or</i></h2>
                     <div class="form-modal-button">
                         <p>ping <i><a href="#form-modal" class="uk-link" style="color: yellow" uk-toggle>here</a>,</i>
@@ -147,23 +147,27 @@
                             <h1 class="modalSubHeading uk-text-center">Research Works</h1>
                             <ul class="uk-list" style="padding-top: 20px">
                                 <!-- paper -->
-                                <li><a href="https://drive.google.com/file/d/1qubOxU9CbiVL_ZPT0kTVvk_rD11W_S3j/view?usp=sharing" target="_blank"
-                                    class="uk-link-reset">
+                                <li><a href="https://drive.google.com/file/d/1qubOxU9CbiVL_ZPT0kTVvk_rD11W_S3j/view?usp=sharing"
+                                        target="_blank" class="uk-link-reset">
 
-                                    <span class="uk-text-center" uk-tooltip="NTMS - 2019, Spain">"Big Data technology in Healthcare: A Survey" <span class="uk-badge" style="background-color: red">NEW</span></span><br><span>-</span>
+                                        <span class="uk-text-center" uk-tooltip="NTMS - 2019, Spain">"Big Data
+                                            technology in Healthcare: A Survey" <span class="uk-badge"
+                                                style="background-color: red">NEW</span></span><br><span>-</span>
                                         <span style="color: gray; font-family: 'Righteous', cursive;"><i
-                                                style="color: gray;">Vatsal J. Saglani, Bharat S. Rawal, V. Vijayakumar, Longzhi Yang.</i></span>
-                                    </span>
+                                                style="color: gray;">Vatsal J. Saglani, Bharat S. Rawal, V. Vijayakumar,
+                                                Longzhi Yang.</i></span>
+                                        </span>
 
-                                </a>
-                            </li>
-                            <!-- /paper -->
+                                    </a>
+                                </li>
+                                <!-- /paper -->
 
                                 <!-- paper-1 -->
-                                <li style="padding-top: 25px;"><a href="https://ieeexplore.ieee.org/document/8553889" target="_blank"
-                                        class="uk-link-reset">
+                                <li style="padding-top: 25px;"><a href="https://ieeexplore.ieee.org/document/8553889"
+                                        target="_blank" class="uk-link-reset">
 
-                                        <span class="uk-text-center" uk-tooltip="ICOEI - 2018">"Classifying and Predicting DoS and DDoS Attacks
+                                        <span class="uk-text-center" uk-tooltip="ICOEI - 2018">"Classifying and
+                                            Predicting DoS and DDoS Attacks
                                             on
                                             Cloud Services"<br><span>-</span>
                                             <span style="color: gray; font-family: 'Righteous', cursive;"><i
@@ -180,7 +184,8 @@
                                 <li style="padding-top: 25px;"><a href="https://ieeexplore.ieee.org/document/8553780"
                                         target="_blank" class="uk-link-reset">
 
-                                        <span class="uk-text-center" uk-tooltip="ICOEI - 2018">“Malware Classification Using Machine Learning
+                                        <span class="uk-text-center" uk-tooltip="ICOEI - 2018">“Malware Classification
+                                            Using Machine Learning
                                             Algorithms"<br><span>-</span>
                                             <span style="color: gray; font-family: 'Righteous', cursive;"><i
                                                     style="color: gray;">N.
@@ -197,7 +202,8 @@
                                         href="https://drive.google.com/file/d/1OWQQ7EDgCwBUj6RojG5aUOsIm6nfOO1M/view?usp=sharing"
                                         target="_blank" class="uk-link-reset">
 
-                                        <span class="uk-text-center" uk-tooltip="CTEMS - 2018">“IoT based Smart Safe System"<br><span>-</span>
+                                        <span class="uk-text-center" uk-tooltip="CTEMS - 2018">“IoT based Smart Safe
+                                            System"<br><span>-</span>
                                             <span style="color: gray; font-family: 'Righteous', cursive;"><i
                                                     style="color: gray;">Vatsal
                                                     J. Saglani; Aayush V. Gupta; Rupam Sarma; Dr. D Rekha; Shashank
@@ -214,8 +220,8 @@
                             <h1 class="modalSubHeading uk-text-center">Notable Projects</h1>
                             <ul class="uk-list" style="padding-top: 20px">
                                 <!-- Project 4 -->
-                                <li><a href="https://github.com/vatsalsaglani/xrayimage_extractfeatures"
-                                        target="_blank" class="uk-link-reset">
+                                <li><a href="https://github.com/vatsalsaglani/xrayimage_extractfeatures" target="_blank"
+                                        class="uk-link-reset">
 
                                         <h3 class="uk-text-centet"
                                             style="color: white; font-family: 'Righteous', cursive;">A Python package to
@@ -301,6 +307,28 @@
                     <h1 class="modalHeading">BLOGS</h1>
                 </div>
                 <div class="uk-container uk-container-small">
+                    <div class="uk-align-center uk-box-shadow-bottom uk-box-shadow-small uk-border-rounded"
+                        style="background-color: white">
+
+                        <div class="uk-padding-large">
+                            <img src="images/thumbnail-blog4.jpg" alt="">
+                            <h2 class="uk-text-emphasis" style="font-family: 'Righteous', cursive;">Multi-class
+                                classification using CNN over PyTorch, and the basics of CNN<span class="uk-badge" style="background-color: red">NEW</span></h2>
+                            <p class="uk-text-truncate uk-text-muted" style="font-family: 'Righteous', cursive;">
+                                I always had this conundrum about how an image goes through a Convolutional Neural
+                                Network; in this blog, I try to address it and build a multi-class classifier for
+                                classifying apparels from scratch using PyTorch. And no it's not on the MNIST Fashion
+                                dataset. It also shows how to work with DataLoaders in PyTorch and many other things.
+                                Please have a read and comment down if there are any discrepancies.
+                            </p>
+                            <div class="uk-align-center">
+                                <a href="
+                                https://medium.com/@thevatsalsaglani/multi-class-image-classification-using-cnn-over-pytorch-and-the-basics-of-cnn-fdf425a11dc0"
+                                    target="_blank" class="uk-button uk-button-text">READ MORE</a>
+
+                            </div>
+                        </div>
+                    </div>
                     <div class="uk-align-center uk-box-shadow-bottom uk-box-shadow-small uk-border-rounded"
                         style="background-color: white">
 
@@ -399,28 +427,32 @@
                         <li>shoot a <a href="mailto:youknowiamtrying@gmail.com" target="_blank"
                                 uk-icon="icon: mail; ratio: 2"></a></li>
                         <li><del>friend me on <a href="https://www.facebook.com/theVatsal.saglani" target="_blank"
-                                uk-icon="icon: facebook; ratio: 2"></a></del><span class="uk-badge" style="background-color: red">X</span></li>
+                                    uk-icon="icon: facebook; ratio: 2"></a></del><span class="uk-badge"
+                                style="background-color: red">X</span></li>
                         <li><del>follow me on <a href="https://www.instagram.com/thevatsalsaglani/" target="_blank"
-                                uk-icon="icon: instagram; ratio: 2"></a></del> <span class="uk-badge" style="background-color: red">X</span></li>
+                                    uk-icon="icon: instagram; ratio: 2"></a></del> <span class="uk-badge"
+                                style="background-color: red">X</span></li>
                         <li>we can endorse each other on <a href="https://www.linkedin.com/in/vatsalsaglani/"
                                 target="_blank" uk-icon="icon: linkedin; ratio: 2"></a></li>
-                        <li><del>don't bother searching me on</del>, retweet my tweets or mention me on <a href="https://twitter.com/thevatsal_s" target="_blank"
+                        <li><del>don't bother searching me on</del>, retweet my tweets or mention me on <a
+                                href="https://twitter.com/thevatsal_s" target="_blank"
                                 uk-icon="icon: twitter; ratio: 2"></a></li>
                         <li>wait I am on <a href="https://thevatsalsaglani.tumblr.com" target="_blank"
                                 uk-icon="icon: tumblr; ratio: 2"></a></li>
                         <li>or...</li>
                         <li>text me on <a href="tel: +91 9790960353" target="_blank"
                                 uk-icon="icon: whatsapp; ratio: 2"></a></li>
-                        
+
                         <ul>
                             <li>ooh, also don't forget to check out <a
-                                href="https://drive.google.com/file/d/1Vo2R4J4wNOW_7r_6yXT1Ms5FUHJxB-8p/view"
-                                target="_blankl" uk-icon="icon: file-pdf; ratio: 1.0"
-                                uk-tooltip="title: RESUME BRIEF; pos: right; animation: uk-animation-kenburns; duration: 1500"></a>, </li>
-                            <li><a
-                                href="https://drive.google.com/open?id=1fsGQioPgIqzlSc2TaKKN_8E77TfB33kb"
-                                target="_blankl" uk-icon="icon: file-pdf; ratio: 2.5"
-                                uk-tooltip="title: RESUME; pos: right; animation: uk-animation-kenburns; duration: 1500"></a></li>
+                                    href="https://drive.google.com/file/d/1Vo2R4J4wNOW_7r_6yXT1Ms5FUHJxB-8p/view"
+                                    target="_blankl" uk-icon="icon: file-pdf; ratio: 1.0"
+                                    uk-tooltip="title: RESUME BRIEF; pos: right; animation: uk-animation-kenburns; duration: 1500"></a>,
+                            </li>
+                            <li><a href="https://drive.google.com/open?id=1fsGQioPgIqzlSc2TaKKN_8E77TfB33kb"
+                                    target="_blankl" uk-icon="icon: file-pdf; ratio: 2.5"
+                                    uk-tooltip="title: RESUME; pos: right; animation: uk-animation-kenburns; duration: 1500"></a>
+                            </li>
                         </ul>
 
 
@@ -469,7 +501,7 @@
         <div class="navContent uk-text-center uk-align-center">
             <h3 class="uk-link-reset"><a href="#modalAbout" uk-toggle>ABOUT</a></h3>
             <h3 class="uk-link-reset"><a href="#modalWork" uk-toggle>WORK</a></h3>
-            <h3 class="uk-link-reset"><a href="#modalBlog" uk-toggle>BLOGS</a></h3>
+            <h3 class="uk-link-reset"><a href="#modalBlog" uk-toggle>BLOGS <span class="uk-badge" style="background-color: red">NEW</span></a></h3>
             <h3 class="uk-link-reset"><a href="#modalContact" uk-toggle>CONTACT,</a><i> or</i></h3>
             <div class="form-modal-button-phone">
                 <p>ping <i><a href="#form-modal" class="uk-link" style="color: yellow" uk-toggle>
