added reseach paper link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class=" leftContent">
                 <div class="uk-text-center navContainer">
                     <h2><a href="#modalAbout" class="uk-link-reset" uk-toggle>ABOUT</a></h2>
-                    <h2><a href="#modalWork" class="uk-link-reset" uk-toggle>WORK</a></h2>
+                    <h2><a href="#modalWork" class="uk-link-reset" uk-toggle>WORK <span class="uk-badge" style="background-color: red">NEW</span></a></h2>
                     <h2><a href="#modalBlog" class="uk-link-reset" uk-toggle>BLOGS <span class="uk-badge" style="background-color: red">NEW</span></a></h2>
                     <h2><a href="#modalContact" class="uk-link-reset" uk-toggle>CONTACT,</a><i> or</i></h2>
                     <div class="form-modal-button">
@@ -312,7 +312,7 @@
 
                         <div class="uk-padding-large">
                             <img src="images/thumbnail-blog4.jpg" alt="">
-                            <h2 class="uk-text-emphasis" style="font-family: 'Righteous', cursive;">Multi-class
+                            <h2 class="uk-text-emphasis" style="font-family: 'Righteous', cursive;">Multi-class Image
                                 classification using CNN over PyTorch, and the basics of CNN<span class="uk-badge" style="background-color: red">NEW</span></h2>
                             <p class="uk-text-truncate uk-text-muted" style="font-family: 'Righteous', cursive;">
                                 I always had this conundrum about how an image goes through a Convolutional Neural
@@ -500,7 +500,7 @@
 
         <div class="navContent uk-text-center uk-align-center">
             <h3 class="uk-link-reset"><a href="#modalAbout" uk-toggle>ABOUT</a></h3>
-            <h3 class="uk-link-reset"><a href="#modalWork" uk-toggle>WORK</a></h3>
+            <h3 class="uk-link-reset"><a href="#modalWork" uk-toggle>WORK <span class="uk-badge" style="background-color: red">NEW</span></a></h3>
             <h3 class="uk-link-reset"><a href="#modalBlog" uk-toggle>BLOGS <span class="uk-badge" style="background-color: red">NEW</span></a></h3>
             <h3 class="uk-link-reset"><a href="#modalContact" uk-toggle>CONTACT,</a><i> or</i></h3>
             <div class="form-modal-button-phone">
