added certificates and links

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
             <div class=" leftContent">
                 <div class="uk-text-center navContainer">
                     <h2><a href="#modalAbout" class="uk-link-reset" uk-toggle>ABOUT</a></h2>
-                    <h2><a href="#modalWork" class="uk-link-reset" uk-toggle>WORK <span class="uk-badge" style="background-color: red">NEW</span></a></h2>
-                    <h2><a href="#modalBlog" class="uk-link-reset" uk-toggle>BLOGS <span class="uk-badge" style="background-color: red">NEW</span></a></h2>
+                    <h2><a href="#modalWork" class="uk-link-reset" uk-toggle>WORK <span class="uk-badge"
+                                style="background-color: red">NEW</span></a></h2>
+                    <h2><a href="#modalBlog" class="uk-link-reset" uk-toggle>BLOGS <span class="uk-badge"
+                                style="background-color: red">NEW</span></a></h2>
                     <h2><a href="#modalContact" class="uk-link-reset" uk-toggle>CONTACT,</a><i> or</i></h2>
                     <div class="form-modal-button">
                         <p>ping <i><a href="#form-modal" class="uk-link" style="color: yellow" uk-toggle>here</a>,</i>
@@ -84,38 +86,36 @@
                     <div class="uk-grid-collapse uk-child-width-1-2@s" uk-grid>
                         <div class="aboutLeft uk-padding-small ">
                             <h1 class="modalSubHeading">Sup,</h1>
-                            <p>I am a Machine Learning, and Artificial Intelligence enthusiast, full stack web
+                            <p class="uk-text-justify">I am a Machine Learning, and Artificial Intelligence enthusiast,
+                                full stack web
                                 developer, and a nascent native applications developer currently pursuing my
                                 <b>Bachelors
-                                    in Computer Science</b> at <b>Vellore Institute of Technology</b>. </p>
+                                    in Computer Science</b> at <b>Vellore Institute of Technology</b>. Currently
+                                <b>focusing on <i>Deep Learning for Computer Vision</i></Deep></b> and <b>looking for a
+                                    <i>long-term research-based
+                                        internship</i></b>. </p>
                         </div>
                         <div class="aboutRight uk-padding-small ">
                             <h1 class="modalSubHeading">Love to solve</h1>
-                            <p>real-world problems and develop recommender systems. I am continually
+                            <p class="uk-text-justify">real-world problems using Deep Learning and Machine Learning. I am continually
                                 trying new ways to integrate my machine learning models to the web. Moreover, I am
                                 always on the learning path to grasp everything that interests me. </p>
                         </div>
                     </div>
                     <div class="uk-grid-collapse uk-child-width-1-2@s" uk-grid>
                         <div class="aboutLeft uk-padding-small ">
-                            <h1 class="modalSubHeading">I am also interested in</h1>
-                            <ul class="uk-list">
-                                <li>
-                                    <h4>Computer Vision</h4>
-                                </li>
-                                <li>
-                                    <h4>Natural Language Processing</h4>
-                                </li>
-                                <li>
-                                    <h4>Internet of Things</h4>
-                                </li>
-                            </ul>
+                            <h1 class="modalSubHeading">Working on</h1>
+                            <p class="uk-text-justify">Image Fusion using CNN and Deep
+                                Learning. Recently finished developing a Python package which extracts various
+                                content-based features from grayscale images which can be further used for
+                                classification. I write blogs about Deep Learning, Web Scraping, Image Processing, and
+                                some web development. </p>
                         </div>
                         <div class="aboutRight uk-padding-small ">
                             <h1 class="modalSubHeading">I write</h1>
-                            <p>programming <a href="https://medium.com/@thevatsalsaglani" target="_blank"
+                            <p class="uk-text-justify">programming <a href="https://medium.com/@thevatsalsaglani" target="_blank"
                                     style="text-decoration: none">blogs</a>
-                                related to python, machine learning, web scraping, and web
+                                related to deep learning, computer vision, python, machine learning, web scraping, and web
                                 development. My primary motivation is to help others like me through these blogs of
                                 mine.
                             </p>
@@ -162,6 +162,28 @@
                                 </li>
                                 <!-- /paper -->
 
+                                <!-- paper-3 -->
+                                <li style="padding-top: 25px;"><a
+                                        href="https://drive.google.com/file/d/1OWQQ7EDgCwBUj6RojG5aUOsIm6nfOO1M/view?usp=sharing"
+                                        target="_blank" class="uk-link-reset">
+
+                                        <span class="uk-text-center" uk-tooltip="CTEMS - 2018">“IoT based Smart Safe
+                                            System"<br><span>-</span>
+                                            <span style="color: gray; font-family: 'Righteous', cursive;"><i
+                                                    style="color: gray;">Vatsal
+                                                    J. Saglani; Aayush V. Gupta; Rupam Sarma; Dr. D Rekha; Shashank
+                                                    Pathak.</i></span>
+                                        </span>
+                                        <a href="https://drive.google.com/open?id=1_sBCAb9c_ntJWU3BMAvqJlrWLbtkmfmI"
+                                            target="_blank" uk-icon="file-pdf" uk-tooltip="PAPER"></a>
+                                        <a href="https://drive.google.com/open?id=1e-hgyxf3K-YedAAnL9kt9ZrqR0-73xis"
+                                            target="_blank" uk-icon="bookmark" uk-tooltip="CERTIFICATE"></a>
+
+                                    </a>
+                                </li>
+                                <!-- /paper-3 -->
+
+
                                 <!-- paper-1 -->
                                 <li style="padding-top: 25px;"><a href="https://ieeexplore.ieee.org/document/8553889"
                                         target="_blank" class="uk-link-reset">
@@ -175,6 +197,10 @@
                                                     S. Kiruthika Devi; Vatsal J.
                                                     Saglani; Aayush V. Gupta; Dr. T Subbulakshmi.</i></span>
                                         </span>
+                                        <a href="https://drive.google.com/open?id=14TnbPPmsRheoEVXvAzBTd4WNbcYTPxBG"
+                                            target="_blank" uk-icon="file-pdf" uk-tooltip="PAPER"></a>
+                                        <a href="https://drive.google.com/open?id=1hPoiglr-jf4o4tfq-OXiSrDBDqXhUKVP"
+                                            target="_blank" uk-icon="bookmark" uk-tooltip="CERTIFICATE"></a>
 
                                     </a>
                                 </li>
@@ -192,27 +218,16 @@
                                                     Udayakumar; Vatsal J. Saglani; Aayush
                                                     V. Gupta; Dr. T Subbulakshmi.</i></span>
                                         </span>
+                                        <a href="https://drive.google.com/open?id=1qkpfQ2zA0Zx_8oXdKVqcuqZkfPjIH_eA"
+                                            target="_blank" uk-icon="file-pdf" uk-tooltip="PAPER"></a>
+                                        <a href="https://drive.google.com/open?id=1-1fpkBYLao8U53TlZeUmzYvjr743ypMd"
+                                            target="_blank" uk-icon="bookmark" uk-tooltip="CERTIFICATE"></a>
+
 
                                     </a>
                                 </li>
                                 <!-- /paper-2 -->
 
-                                <!-- paper-3 -->
-                                <li style="padding-top: 25px;"><a
-                                        href="https://drive.google.com/file/d/1OWQQ7EDgCwBUj6RojG5aUOsIm6nfOO1M/view?usp=sharing"
-                                        target="_blank" class="uk-link-reset">
-
-                                        <span class="uk-text-center" uk-tooltip="CTEMS - 2018">“IoT based Smart Safe
-                                            System"<br><span>-</span>
-                                            <span style="color: gray; font-family: 'Righteous', cursive;"><i
-                                                    style="color: gray;">Vatsal
-                                                    J. Saglani; Aayush V. Gupta; Rupam Sarma; Dr. D Rekha; Shashank
-                                                    Pathak.</i></span>
-                                        </span>
-
-                                    </a>
-                                </li>
-                                <!-- /paper-3 -->
 
                             </ul>
                         </div>
@@ -313,7 +328,8 @@
                         <div class="uk-padding-large">
                             <img src="images/thumbnail-blog4.jpg" alt="">
                             <h2 class="uk-text-emphasis" style="font-family: 'Righteous', cursive;">Multi-class Image
-                                classification using CNN over PyTorch, and the basics of CNN<span class="uk-badge" style="background-color: red">NEW</span></h2>
+                                classification using CNN over PyTorch, and the basics of CNN<span class="uk-badge"
+                                    style="background-color: red">NEW</span></h2>
                             <p class="uk-text-truncate uk-text-muted" style="font-family: 'Righteous', cursive;">
                                 I always had this conundrum about how an image goes through a Convolutional Neural
                                 Network; in this blog, I try to address it and build a multi-class classifier for
@@ -500,8 +516,10 @@
 
         <div class="navContent uk-text-center uk-align-center">
             <h3 class="uk-link-reset"><a href="#modalAbout" uk-toggle>ABOUT</a></h3>
-            <h3 class="uk-link-reset"><a href="#modalWork" uk-toggle>WORK <span class="uk-badge" style="background-color: red">NEW</span></a></h3>
-            <h3 class="uk-link-reset"><a href="#modalBlog" uk-toggle>BLOGS <span class="uk-badge" style="background-color: red">NEW</span></a></h3>
+            <h3 class="uk-link-reset"><a href="#modalWork" uk-toggle>WORK <span class="uk-badge"
+                        style="background-color: red">NEW</span></a></h3>
+            <h3 class="uk-link-reset"><a href="#modalBlog" uk-toggle>BLOGS <span class="uk-badge"
+                        style="background-color: red">NEW</span></a></h3>
             <h3 class="uk-link-reset"><a href="#modalContact" uk-toggle>CONTACT,</a><i> or</i></h3>
             <div class="form-modal-button-phone">
                 <p>ping <i><a href="#form-modal" class="uk-link" style="color: yellow" uk-toggle>
