added certificates and links

--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
                             <p class="uk-text-justify">Image Fusion using CNN and Deep
                                 Learning. Recently finished developing a Python package which extracts various
                                 content-based features from grayscale images which can be further used for
-                                classification. I write blogs about Deep Learning, Web Scraping, Image Processing, and
-                                some web development. </p>
+                                classification.  </p>
                         </div>
                         <div class="aboutRight uk-padding-small ">
                             <h1 class="modalSubHeading">I write</h1>
