changed index file

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <h2><a href="#modalAbout" class="uk-link-reset" uk-toggle>ABOUT</a></h2>
                     <h2><a href="#modalWork" class="uk-link-reset" uk-toggle>WORK <span class="uk-badge"
                                 style="background-color: red">NEW</span></a></h2>
-                    <h2><a href="http://blogs.vatsal.ml" class="uk-link-reset" target="_blank">BLOGS <span class="uk-badge"
+                    <h2><a href="https://blogs.thevatsalsaglani.xyz" class="uk-link-reset" target="_blank">BLOGS <span class="uk-badge"
                                 style="background-color: red">NEW</span></a></h2>
                     <h2><a href="#modalContact" class="uk-link-reset" uk-toggle>CONTACT,</a><i> or</i></h2>
                     <div class="form-modal-button">
@@ -517,7 +517,7 @@
             <h3 class="uk-link-reset"><a href="#modalAbout" uk-toggle>ABOUT</a></h3>
             <h3 class="uk-link-reset"><a href="#modalWork" uk-toggle>WORK <span class="uk-badge"
                         style="background-color: red">NEW</span></a></h3>
-            <h3 class="uk-link-reset"><a href="http://blogs.vatsal.ml" target="_blank">BLOGS <span class="uk-badge"
+            <h3 class="uk-link-reset"><a href="https://blogs.thevatsalsaglani.xyz" target="_blank">BLOGS <span class="uk-badge"
                         style="background-color: red">NEW</span></a></h3>
             <h3 class="uk-link-reset"><a href="#modalContact" uk-toggle>CONTACT,</a><i> or</i></h3>
             <div class="form-modal-button-phone">
